# load-shedding-cal-rs

./: .gitignore  Cargo.toml  README.md  samconfig.toml  template.yaml
events/: event.json
rust_app/: Cargo.toml
rust_app/src/: ical.rs  interval.rs  main.rs  scrape.rs  timetable.rs
src/: ical.rs  main.rs  scrape.rs  timetable.rs
