[package]
name = "load-shedding-cal-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
lambda_http = { version = "0.7.3", default-features = false, features = [
    "apigw_http",
] }
lambda_runtime = "0.7.3"
regex = "1.7.3"
reqwest = { version = "0.11.16", default-features = false, features = [
    "rustls-tls",
] }
scraper = "0.16.0"
time = { version = "0.3.20", features = ["parsing", "formatting", "macros"] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
uuid = { version = "1.3.0", features = ["v4"] }
