[package]
name = "load-shedding-cal-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
console-subscriber = "0.1.10"
lambda_http = { version = "0.8.1", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8.1"
regex = "1.9.3"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "json"] }
scraper = "0.17.1"
serde = "1.0.183"
serde_json = "1.0.104"
time = { version = "0.3.25", features = ["parsing", "formatting", "macros", "serde-well-known"] }
tokio = { version = "1.30.0", features = ["macros", "tracing"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt"] }
uuid = { version = "1.4.1", features = ["v4"] }
